crates/vescpkg-rs/tests/ui/raw_package_state_borrow_is_not_public.rs
fn main() {
    let _ = unsafe { vescpkg_rs::firmware_package_state_mut!(u32, main) };
}
